--- a/application/templates/partials/navigation.html
+++ b/application/templates/partials/navigation.html
@@ -1,9 +1,9 @@
 <a class="fancy-link" href="{{ url_for('home') }}">Home</a>
+<span> | </span>
 <a class="fancy-link" href="{{ url_for('events') }}">Events</a>
+<span> | </span>
 <a class="fancy-link" href="{{ url_for('news') }}">News</a>
+<span> | </span>
 <a class="fancy-link" href="{{ url_for('about') }}">About</a>
+<span> | </span>
 <a class="fancy-link" href="#">Contact</a>
-<a class="fancy-link" style="flex: 1 1 auto;"></a>
-<a class="fancy-link" href="#">My Account</a>
-<a class="fancy-link" href="{{ url_for('bp_management.dashboard') }}">Admin Portal</a>
-<a class="fancy-link" data-a11y-dialog-show="about-site-dialog">About This Site</a>
