--- a/application/static/old_sass/main.css
+++ b/application/static/old_sass/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
  * Primitive UI | MIT License
  *
@@ -190,7 +189,7 @@ dd {
 .wrapper {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1120px;
+  max-width: 980px;
   padding-right: 2rem;
   padding-left: 2rem;
 }
@@ -238,9 +237,6 @@ div.scrollbar {
 
 #content.background {
   background: #111111;
-  -webkit-box-flex: 14;
-      -ms-flex: 14;
-          flex: 14;
 }
 
 #content .flex {
@@ -252,12 +248,6 @@ div.scrollbar {
           align-items: flex-start;
   -ms-flex-line-pack: start;
       align-content: flex-start;
-}
-
-#content .grow {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
 }
 
 #content .sidebar {
@@ -744,83 +734,6 @@ caption {
   }
 }
 
-/*
- * Navigation
- */
-.navigation {
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
-  background: #080808;
-  width: 20rem;
-}
-
-.navigation .sidebar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  overflow: hidden;
-  margin: 0;
-  padding: 20px;
-}
-
-.navigation .sidebar a {
-  margin: 1.25em 0 0 0;
-  font-size: clamp(1.1em, 2.1vw, 1.3em);
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-#sidebar-toggle {
-  background-color: orange;
-  border-radius: 50%;
-  display: block;
-  height: 2.2rem;
-  left: 1rem;
-  position: absolute;
-  text-decoration: none;
-  top: 18px;
-  width: 2.2rem;
-}
-
-#sidebar-toggle::after {
-  content: "🡐";
-  color: white;
-  display: block;
-  font-size: 1.6rem;
-  font-weight: bold;
-  margin: -.2rem 0 0 0;
-  text-align: center;
-}
-
-.no-sidebar #sidebar-toggle::after {
-  content: "🡒";
-  margin-left: .2rem;
-}
-
-#sidebar-toggle:hover {
-  background-color: goldenrod;
-}
-
-aside.no-sidebar {
-  display: none;
-}
-
-aside.no-sidebar #content {
-  width: 100%;
-}
-
 /**
  * Layout
  */
@@ -937,24 +850,6 @@ aside.no-sidebar #content {
  *
  * The majority of the configuration for the toolkit.
  */
-.badge {
-  padding: 3px 6px;
-  margin: 0 4px;
-  border-radius: 4px;
-  background: #a31800;
-  color: #fff;
-  font-size: 0.8rem;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.badge img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
 header {
   background: #111111;
 }
@@ -972,11 +867,11 @@ header .header {
           align-items: center;
 }
 
-header .header span {
-  color: #fff;
+.navbar {
+  background: #a31800;
 }
 
-.page-title {
+.navbar .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -986,81 +881,18 @@ header .header span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #a31800;
-  height: 50px;
-  text-size: 0.65rem;
+  height: 3rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
 }
 
-.page-title a {
+.navbar span {
+  opacity: 35%;
+}
+
+.navbar a {
   color: #ffffffec;
-}
-
-.flex-container {
-  height: calc(100vh - 118px);
-  margin: auto;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
-}
-
-@media screen and (min-width: 640px) {
-  .flex-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  aside.navigation {
-    display: none;
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-/* Hug the block above you */
-.hug {
-  margin-top: 0;
-}
-
-/* Squeeze the block beneath you */
-.squeeze {
-  margin-bottom: 0;
-}
-
-#avatar {
-  background-image: url("../images/avatar.jpg");
-  width: 30px;
-  height: 30px;
-  background-size: cover;
-  background-position: center center;
-  border-radius: 50px;
+  text-size: 0.65rem;
 }
 
 #poster,
@@ -1081,22 +913,18 @@ header .header span {
   /*box-shadow: 0px 0px 5px rgba(0,0,0,0.4);*/
   -webkit-transition: linear 0.25s;
   transition: linear 0.25s;
-  height: 40px;
-  width: 40px;
+  height: 2.5rem;
+  width: 2.5rem;
   margin: 10px 20px;
-}
-
-.logo-circle img {
-  border-radius: 50%;
+  background-image: url("/static/images/logo-circle.png");
+  background-position: center;
+  background-size: 2.5rem 2.5rem;
+  background-repeat: no-repeat;
 }
 
 .logo-circle:hover {
   transition: ease-out 0.2s;
   border: 4px solid #ff6d6d91;
   -webkit-transition: ease-out 0.2s;
-}
-
-a .logo-circle {
-  color: transparent;
 }
 /*# sourceMappingURL=main.css.map */
