--- a/application/static/old_sass/base/_variables.sass
+++ b/application/static/old_sass/base/_variables.sass
@@ -25,9 +25,9 @@ $desktop: $medium !default
 // Global Colors
 //==============================================================================
 
-$background: white !default
+$background: #f0f0f0 !default
 $primary-color: #a31800 !default
-$secondary-color: #543a9b !default
+$secondary-color: #5334a8 !default
 $accent-color: #cdcdcd !default
 $alternate-background: #fafafa !default
 $alternate-color: #404040 !default
@@ -48,7 +48,7 @@ $body-font-size: 1rem !default
 $font-style: normal !default
 $font-variant: normal !default
 $font-weight: normal !default
-$font-color: #e9e9e9 !default
+$font-color: #1f1f1f !default
 $font-family: 'Jost', -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif !default
 $line-height: 1.6 !default
 
