--- a/application/static/old_sass/components/_modals.sass
+++ b/application/static/old_sass/components/_modals.sass
@@ -21,8 +21,8 @@
     animation: fade-in 200ms both
 
 .dialog-content
-    background-color: rgba(29, 29, 29, 0.555)
-    backdrop-filter: blur(15px)
+    background-color: rgba(255, 255, 255, 0.877)
+    backdrop-filter: blur(5px)
     margin: auto
     z-index: 2
     position: relative
@@ -61,12 +61,13 @@
     padding: 0
     background-color: transparent
     font-weight: bold
-    font-size: 1.25em
+    font-size: 1.5em
     width: 1.2em
     height: 1.2em
     text-align: center
     cursor: pointer
     transition: 0.15s
+    color: #000
 
 @media screen and (min-width: 700px)
     .dialog-close
