--- a/application/templates/news.html
+++ b/application/templates/news.html
@@ -64,8 +64,9 @@ div.block {
     align-items: center;
     
     padding: 5px;
-    background-color: #181818;
+    background-color: #e4c0c0;
     border-radius: 2px;
+    border-left: 4px solid rgb(124, 18, 18);
 }
 
 div.block a.circle {
