--- a/application/blueprints/person/templates/artist.html
+++ b/application/blueprints/person/templates/artist.html
@@ -14,7 +14,7 @@
 {% block aside %}
 
     {% if credits %}
-        <h3 class="squeeze">Artist Credits</h3>
+        <h3 class="no-margin-bottom">Artist Credits</h3>
         <p class="hug"><i>at Queer Theatre Kalamazoo</i></p>
         {% for c in credits %}
         <a class="fancy-link" href="{{ url_for('bp_production.display_production', prod_id=c.production_id, slug=c.slug) }}">{{ c.title }}</a>, {{ c.role }}<br />
