--- a/application/blueprints/production/templates/production.html
+++ b/application/blueprints/production/templates/production.html
@@ -131,8 +131,9 @@
         align-items: center;
         vertical-align: middle;
         padding: 5px;
-        background-color: #181818;
+        background-color: #e4c0c0;
         border-radius: 2px;
+        border-left: 4px solid rgb(124, 18, 18);
     }
 
     div.block a.circle {
@@ -199,9 +200,10 @@
     .accordion .prod-content-container {
         position: relative;
         margin-bottom: 10px;
-        background: #181818;
+        background-color: #e4c0c0;
         border-radius: 4px;
         padding: 0.25rem 1.5rem;
+        border-left: 4px solid rgb(124, 18, 18);
     }
     
     .accordion .label {
