--- a/application/static/old_sass/components/_helpers.sass
+++ b/application/static/old_sass/components/_helpers.sass
@@ -102,3 +102,21 @@
   height: 1px
   width: 1px
   overflow: hidden
+
+.flex-col
+  display: flex
+  flex-direction: column
+
+.flex-row
+  display: flex
+  flex-direction: row
+
+.flex-3
+  flex: 3
+
+.flex-7
+  flex: 7
+
+.gap-2
+  column-gap: 2rem
+  row-gap: 2rem
