--- a/application/static/old_sass/components/_scaffolding.sass
+++ b/application/static/old_sass/components/_scaffolding.sass
@@ -114,11 +114,14 @@ a.fancy-link,
 .post-content a,
 .prod-content-wrapper a
   position: relative
-  color: rgb(239, 171, 171)
+  color: $link-color
   text-decoration: none
+  font-weight: 400
+  font-style: italic
+  transition-duration: 0.4s
 
   &:hover
-    color: rgb(207, 114, 114)
+    color: $link-hover-color
 
     &::before
       transform: scaleX(1)
@@ -131,9 +134,9 @@ a.fancy-link,
     height: 2px
     bottom: 0
     left: 0
-    background-color: rgb(212, 143, 143)
+    background-color: $link-hover-color
     transform: scaleX(0)
-    transition: transform 0.3s ease
+    transition: transform 0.2s ease
 
 // Highlight
 mark
@@ -236,56 +239,23 @@ dd
 
   max-width: 980px
 
-  padding-right: 2rem
-  padding-left: 2rem
+  padding-right: 3.5rem
+  padding-left: 3.5rem
 
 // Content
 div.content-section
   padding: $content-padding-mobile
 
-*::-webkit-scrollbar,
-*::-webkit-scrollbar-thumb
-  width: 26px
-  border-radius: 13px
-  background-clip: padding-box
-  border: 10px solid transparent
-
-*::-webkit-scrollbar-thumb
-  box-shadow: inset 0 0 0 10px
-
-div.scrollbar:hover
-  // color: rgba(0, 0, 0, 0.3)
-
-div.scrollbar
-  overflow: auto
-  // color: rgba(0, 0, 0, 0)
-  //-webkit-text-fill-color: white
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2)
-  transition: color .3s ease
-
 @include small-breakpoint
   .content-section
     padding: $content-padding
 
-#content
-  width: 100%
+.info
+  // height: 100%
+  background-color: #e4c0c0;
+  border-radius: 4px
+  padding: 20px
+  border-left: 4px solid rgb(124, 18, 18);
 
-  .info
-    // height: 100%
-    background: #43434380
-    border-radius: 4px
-    padding: 20px
-
-  &.background
-    background: $bg-dark
-
-  .flex
-    display: flex
-    align-items: flex-start
-    align-content: flex-start
-
-  .sidebar
-    /* min-width: 35% */
-    max-width: 35%
-    margin-left: 2rem;
-    flex: 0 1 auto;
+.sidebar
+  flex: 0 1 auto;
