--- a/application/static/old_sass/main.css
+++ b/application/static/old_sass/main.css
@@ -24,8 +24,8 @@ html {
 }
 
 body {
-  color: #e9e9e9;
-  background: white;
+  color: #1f1f1f;
+  background: #f0f0f0;
   font-size: 1rem;
   margin: 0;
 }
@@ -59,15 +59,19 @@ a.fancy-link,
 .post-content a,
 .prod-content-wrapper a {
   position: relative;
-  color: #efabab;
+  color: #a31800;
   text-decoration: none;
+  font-weight: 400;
+  font-style: italic;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
 }
 
 a.fancy-link:hover,
 .link-like:hover,
 .post-content a:hover,
 .prod-content-wrapper a:hover {
-  color: #cf7272;
+  color: #570d00;
 }
 
 a.fancy-link:hover::before,
@@ -89,13 +93,13 @@ a.fancy-link::before,
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #d48f8f;
+  background-color: #570d00;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
 }
 
 mark {
@@ -125,7 +129,7 @@ pre {
   -moz-tab-size: 2;
     -o-tab-size: 2;
        tab-size: 2;
-  color: #e9e9e9;
+  color: #1f1f1f;
   font-family: Menlo, monospace;
   font-size: 14px;
   margin: 0 0 1.5rem 0;
@@ -190,33 +194,12 @@ dd {
   margin-right: auto;
   margin-left: auto;
   max-width: 980px;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  padding-right: 3.5rem;
+  padding-left: 3.5rem;
 }
 
 div.content-section {
   padding: 30px 0;
-}
-
-*::-webkit-scrollbar,
-*::-webkit-scrollbar-thumb {
-  width: 26px;
-  border-radius: 13px;
-  background-clip: padding-box;
-  border: 10px solid transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 0 10px;
-          box-shadow: inset 0 0 0 10px;
-}
-
-div.scrollbar {
-  overflow: auto;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
-  -webkit-transition: color .3s ease;
-  transition: color .3s ease;
 }
 
 @media (min-width: 600px) {
@@ -225,35 +208,14 @@ div.scrollbar {
   }
 }
 
-#content {
-  width: 100%;
-}
-
-#content .info {
-  background: #43434380;
+.info {
+  background-color: #e4c0c0;
   border-radius: 4px;
   padding: 20px;
+  border-left: 4px solid #7c1212;
 }
 
-#content.background {
-  background: #111111;
-}
-
-#content .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
-}
-
-#content .sidebar {
-  /* min-width: 35% */
-  max-width: 35%;
-  margin-left: 2rem;
+.sidebar {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 auto;
           flex: 0 1 auto;
@@ -495,6 +457,44 @@ div.scrollbar {
   overflow: hidden;
 }
 
+.flex-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.flex-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.flex-3 {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+}
+
+.flex-7 {
+  -webkit-box-flex: 7;
+      -ms-flex: 7;
+          flex: 7;
+}
+
+.gap-2 {
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
+  row-gap: 2rem;
+}
+
 /**
  * Buttons
  */
@@ -540,8 +540,8 @@ div.scrollbar {
 .accent-button,
 a.accent-button {
   color: #ffffff;
-  border: 1px solid #543a9b;
-  background: #543a9b;
+  border: 1px solid #5334a8;
+  background: #5334a8;
 }
 
 .accent-button:hover, .accent-button:focus, .accent-button:active,
@@ -549,8 +549,8 @@ a.accent-button:hover,
 a.accent-button:focus,
 a.accent-button:active {
   color: #ffffff;
-  border: 1px solid #402c76;
-  background: #402c76;
+  border: 1px solid #402881;
+  background: #402881;
 }
 
 .muted-button,
@@ -765,9 +765,9 @@ caption {
 }
 
 .dialog-content {
-  background-color: rgba(29, 29, 29, 0.555);
-  -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
+  background-color: rgba(255, 255, 255, 0.877);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   margin: auto;
   z-index: 2;
   position: relative;
@@ -829,13 +829,14 @@ caption {
   padding: 0;
   background-color: transparent;
   font-weight: bold;
-  font-size: 1.25em;
+  font-size: 1.5em;
   width: 1.2em;
   height: 1.2em;
   text-align: center;
   cursor: pointer;
   -webkit-transition: 0.15s;
   transition: 0.15s;
+  color: #000;
 }
 
 @media screen and (min-width: 700px) {
@@ -850,10 +851,6 @@ caption {
  *
  * The majority of the configuration for the toolkit.
  */
-header {
-  background: #111111;
-}
-
 header .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -891,15 +888,22 @@ header .header {
 }
 
 .navbar a {
-  color: #ffffffec;
-  text-size: 0.65rem;
+  color: #f1f1f1;
+  font-weight: 600;
+}
+
+.navbar a:hover {
+  color: #dad0d0;
+}
+
+.navbar a::before {
+  background-color: #dad0d0;
 }
 
 #poster,
 #headshot {
   background-size: contain;
   background-position: center center;
-  height: 100%;
   width: 100%;
   border-radius: 4px;
   margin-bottom: 10px;
