--- a/application/templates/events.html
+++ b/application/templates/events.html
@@ -65,8 +65,9 @@
         align-items: center;
         padding: 1rem;
         width: 100%;
-        background-color: #181818;
+        background-color: #e4c0c0;
         border-radius: 2px;
+        border-left: 4px solid rgb(124, 18, 18);
     }
 
     div.block a.circle {
