--- a/application/static/old_sass/components/_helpers.sass
+++ b/application/static/old_sass/components/_helpers.sass
@@ -45,6 +45,10 @@
   max-width: 100%
   height: auto
 
+// Width to 100%
+.full-width
+  width: 100%
+
 // Display State
 .show
   display: block !important
