--- a/application/static/old_sass/components/_scaffolding.sass
+++ b/application/static/old_sass/components/_scaffolding.sass
@@ -138,6 +138,9 @@ a.fancy-link,
     transform: scaleX(0)
     transition: transform 0.2s ease
 
+  &.active
+    color: #ff9a9a
+
 // Highlight
 mark
   background: $highlight
