--- a/application/static/old_sass/main.sass
+++ b/application/static/old_sass/main.sass
@@ -36,6 +36,8 @@
 @import 'components/navigation'
 @import 'components/layout'
 @import 'components/modals'
+@import 'components/_blocks'
+@import 'components/_elements'
 
 //==============================================================================
 // My Crap
