--- a/application/templates/events.html
+++ b/application/templates/events.html
@@ -1,33 +1,46 @@
 {% extends "base.html" %}
+{% set active_page = "events" %}
 
 {% block content %}
 <h3>Season 9</h3>
 
-<div class="production-listing">
-    {% for production in productions %}
 
-    <div class="block">
-        <a class="circle" href="{{ url_for('bp_production.display_production', prod_id=production.production_id, slug=production.slug) }}">
-        <img height="150" {% if production.poster
-            %}src="{{ url_for('bp_production.static', filename=('images/posters/' + production.poster)) }}"
-            {%else%}src="{{ url_for('bp_production.static', filename=('images/posters/' + 'placeholder.jpg')) }}"
-            {% endif %} />
+<div class="card-container margin-top margin-bottom">
+
+    {% for prod in productions %}
+
+    <div style="flex: 1 1 auto;" class="full-width card accent img">
+
+        <!-- Production poster -->
+        <a class="poster" href="{{ url_for('bp_production.display_production', prod_id=prod.production_id, slug=prod.slug) }}">
+            <img height="150" {% if prod.poster
+                %}src="{{ url_for('bp_production.static', filename=('images/posters/' + prod.poster)) }}"
+                {%else%}src="{{ url_for('bp_production.static', filename=('images/posters/' + 'placeholder.jpg')) }}"
+                {% endif %} />
         </a>
-        <div class="block-wrapper">
-            <h5 class="production-name"><a class="fancy-link" href="{{ url_for('bp_production.display_production', prod_id=production.production_id, slug=production.slug) }}">
-                    {{ production.prod_desc }}</a></h5>
+
+        <!-- Production title and director -->
+        <div class="card-wrapper">
+
+            <!-- Title and link -->
+            <h3>
+                <a class="fancy-link" href="{{ url_for('bp_production.display_production', prod_id=prod.production_id, slug=prod.slug) }}">{{ prod.title }}</a>
+            </h3>
+
+            <!-- Director and link -->
             <p class="director">
                 {% for dir in directors %}
-                    {% if dir.production_id == production.production_id %}
+                    {% if dir.production_id == prod.production_id %}
                     Directed by <span><a class="fancy-link" href="{{ url_for('bp_person.display_artist', artist_id=dir.artist_id) }}">{{ dir.credit_name }}</a></span>
                     {% endif %}
                 {% endfor %}
             </p>
-            <hr align="left" class="performance-divider" />
+
+            <!-- Production perf date range -->
             <p>
                 {% for perf in performances %}
-                    {% if perf.production_id == production.production_id %}
-                    From {{ perf.open_date | format_date_short() }} to {{ perf.close_date | format_date_short() }}, {{ perf.close_date | format_date_year() }}
+                    {% if perf.production_id == prod.production_id %}
+                    Running {{ perf.open_date | format_date_short() }} through {{ perf.close_date | format_date_short() }}, {{ perf.close_date | format_date_year() }}
                     {% endif %}
                 {% endfor %}
             </p>
@@ -35,85 +48,8 @@
     </div>
 
     {% endfor %}
+
 </div>
 
-{% endblock %}
 
-
-{% block styles %}
-<style>
-    div.production-listing-archive {
-        margin: 30px auto;
-        padding: 0 20px;
-        display: grid;
-        /* Define Auto Row size */
-        grid-auto-rows: 175px;
-        /*Define our columns */
-        grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-        grid-gap: 1rem;
-    }
-
-    div.production-listing {
-        display: flex;
-        flex-wrap: wrap;
-        row-gap: 1.5rem;
-        column-gap: 1.5rem;
-    }
-
-    div.block {
-        display: flex;
-        align-items: center;
-        padding: 1rem;
-        width: 100%;
-        background-color: #e4c0c0;
-        border-radius: 2px;
-        border-left: 4px solid rgb(124, 18, 18);
-    }
-
-    div.block a.circle {
-        margin: 0 20px 0 20px;
-    }
-    div.block p {
-        margin-bottom: 0;
-    }
-
-    div.block-wrapper {
-        text-align: left;
-    }
-
-    h5.production-name {
-        font-size: 1.2rem;
-        margin: 0 0 0.25rem 0;
-    }
-
-    p.director {
-        margin: 0;
-    }
-
-    p.director>span {
-        font-style: italic;
-    }
-
-    .circle {
-        line-height: 0;
-        display: inline-block;
-        border: 4px solid rgba(200,200,200,0.4);
-        border-radius: 4px;
-        transition: linear 0.25s;
-        height: 150px;
-        margin: 10px 20px;
-    }
-    .circle:hover {
-        transition: ease-out 0.2s;
-        border: 4px solid #ff6d6d91;
-        -webkit-transition: ease-out 0.2s;
-    }
-    a .circle {
-        color: transparent;
-    }
-    hr.performance-divider {
-        opacity: 0.25;
-        max-width: 75%;
-    }
-</style>
 {% endblock %}
