--- a/application/static/sass/base/_variables.sass
+++ b/application/static/sass/base/_variables.sass
@@ -115,8 +115,8 @@ $muted-border: 1px solid $accent-color !default
 $muted-border-hover: 1px solid darken($accent-color, 30%) !default
 $muted-background: transparent !default
 $muted-background-hover: transparent !default
-$muted-color: #ffffff !default // darken($accent-color, 50%) !default
-$muted-color-hover: #dfdfdf !default // darken($accent-color, 50%) !default
+$muted-color: darken($accent-color, 50%) !default
+$muted-color-hover: #1f1f1f !default // darken($accent-color, 50%) !default
 
 // Round Buttons
 $round-buttons: 40px !default
