--- a/application/static/sass/components/_helpers.sass
+++ b/application/static/sass/components/_helpers.sass
@@ -118,9 +118,12 @@
 .flex-3
   flex: 3
 
-.flex-7
-  flex: 7
+.flex-6
+  flex: 6
 
 .gap-2
   column-gap: 2rem
   row-gap: 2rem
+
+.shadow
+  box-shadow: 4px 4px 6px rgba(0,0,0,0.05)
