--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -222,12 +222,6 @@ div.content-section {
   border-left: 4px solid #7c1212;
 }
 
-.sidebar {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-          flex: 0 1 auto;
-}
-
 /**
  * Grid
  */
@@ -494,16 +488,21 @@ div.content-section {
           flex: 3;
 }
 
-.flex-7 {
-  -webkit-box-flex: 7;
-      -ms-flex: 7;
-          flex: 7;
+.flex-6 {
+  -webkit-box-flex: 6;
+      -ms-flex: 6;
+          flex: 6;
 }
 
 .gap-2 {
   -webkit-column-gap: 2rem;
           column-gap: 2rem;
   row-gap: 2rem;
+}
+
+.shadow {
+  -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
+          box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.05);
 }
 
 /**
@@ -568,14 +567,14 @@ a.accent-button:active {
 a.muted-button {
   background: transparent;
   border: 1px solid #cdcdcd;
-  color: #ffffff;
+  color: #4e4e4e;
 }
 
 .muted-button:hover, .muted-button:focus, .muted-button:active,
 a.muted-button:hover,
 a.muted-button:focus,
 a.muted-button:active {
-  color: #dfdfdf;
+  color: #1f1f1f;
   border: 1px solid #818181;
   background: transparent;
 }
@@ -745,6 +744,55 @@ caption {
   }
 }
 
+header .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navbar {
+  background: #a31800;
+}
+
+.navbar .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 3rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.navbar span {
+  opacity: 35%;
+}
+
+.navbar a {
+  color: #f1f1f1;
+  font-weight: 600;
+}
+
+.navbar a:hover {
+  color: #dad0d0;
+}
+
+.navbar a::before {
+  background-color: #dad0d0;
+}
+
 /**
  * Layout
  */
@@ -752,7 +800,7 @@ caption {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
@@ -907,80 +955,6 @@ div.card-container .card.img {
   display: flex;
 }
 
-a.poster {
-  line-height: 0;
-  display: inline-block;
-  border: 4px solid rgba(200, 200, 200, 0.4);
-  border-radius: 4px;
-  -webkit-transition: linear 0.25s;
-  transition: linear 0.25s;
-  margin: 10px 20px;
-}
-
-a.poster:hover {
-  transition: ease-out 0.2s;
-  border: 4px solid #ff6d6d91;
-  -webkit-transition: ease-out 0.2s;
-}
-
-a.poster img {
-  border-radius: 4px;
-}
-
-/**
- * Variables
- *
- * The majority of the configuration for the toolkit.
- */
-header .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.navbar {
-  background: #a31800;
-}
-
-.navbar .wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 3rem;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
-}
-
-.navbar span {
-  opacity: 35%;
-}
-
-.navbar a {
-  color: #f1f1f1;
-  font-weight: 600;
-}
-
-.navbar a:hover {
-  color: #dad0d0;
-}
-
-.navbar a::before {
-  background-color: #dad0d0;
-}
-
 #poster,
 #headshot {
   background-size: contain;
@@ -988,6 +962,15 @@ header .header {
   width: 100%;
   border-radius: 4px;
   margin-bottom: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media only screen and (max-width: 800px) {
+  div.sidebar,
+  .breadcrumbs {
+    display: none;
+  }
 }
 
 .logo-circle {
