--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -10,7 +10,7 @@
         {% else %} <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% endif %}
         <link rel="stylesheet"
-              href="{{ url_for('static', filename='old_sass/main.css') }}">
+              href="{{ url_for('static', filename='sass/main.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -35,10 +35,12 @@
                     <a href="{{ url_for('home') }}" class="logo-circle"></a>
                     <span class="org-name">Queer Theatre Kalamazoo</span>
                     <div style="flex: 1 1 auto;"></div>
-                    {% for breadcrumb in breadcrumbs %}
-                    <a class="fancy-link" href="{{ breadcrumb.url }}">{{ breadcrumb.text }}</a>
-                    {{ '&nbsp;/&nbsp;'|safe if not loop.last }}
-                {% endfor %}
+                    <div class="breadcrumbs">
+                        {% for breadcrumb in breadcrumbs %}
+                        <a class="fancy-link" href="{{ breadcrumb.url }}">{{ breadcrumb.text }}</a>
+                        {{ '&nbsp;/&nbsp;'|safe if not loop.last }}
+                                        {% endfor %}
+                    </div>
                 </div>
             </header>
 
@@ -58,14 +60,17 @@
             <div id="content" class="margin-top">
                 <div class="wrapper">
                     <div class="flex-row gap-2">
-                        <div class="flex-col flex-7">
+                        <div class="flex-col flex-6">
                             {% block content %}{% endblock %}
                         </div>
                         {% if sidebar %}
-                        <div class="sidebar info flex-3">
-                            {% block sidebar_image %}{% endblock %}
-                            <div>
-                                {% block aside %}{% endblock %}
+                        <div class="sidebar card-container flex-3">
+                                {% block sidebar_image %}{% endblock %}
+                            <div class="card accent full-width">
+                                
+                                <div class="card-wrapper">
+                                    {% block aside %}{% endblock %}
+                                </div>
                             </div>
                         </div>
                         {% endif %}
